--- a/list.html
+++ b/list.html
@@ -14,7 +14,7 @@
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
     <a href="https://hellogithub.com"><div class="blog">
         <div class="title">HelloGitHub</div>
-        <div class="date">分享 GitHub 上有趣、入门级的开源项目。</div>
+        <div class="date">点击跳转，分享 GitHub 上有趣、入门级的开源项目。</div>
     </div></a>
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
     <a href="html/tvbox.html"><div class="blog">
@@ -24,7 +24,7 @@
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
     <a href="https://github.com/QingJ01/123pan_unlock" target="_blank"><div class="blog">
         <div class="title">123云盘</div>
-        <div class="date">解锁你的123云盘VIP，让体验更美好#Tampermonkey#脚本</div>
+        <div class="date">点击跳转GitHub，解锁你的123云盘VIP，让体验更美好#Tampermonkey#脚本</div>
     </div></a>
     <!-- -----------------------分割线----------------------- --><div class="line"></div>
     <a href="html/tbtool.html"><div class="blog">
