--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="modal-content">
           <button class="close-btn" id="closeBtn">&times;</button>
           <video id="popupVideo" class="modal-video" controls>
-            <source src="https://rr.855955.xyz/j/j.mp4" type="video/mp4">
+            <source src="https://rr.855955.xyz/kun/jkk.mp4" type="video/mp4">
             您的浏览器不支持 video 标签。
           </video>
         </div>
