--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="modal-content">
           <button class="close-btn" id="closeBtn">&times;</button>
           <video id="popupVideo" class="modal-video" controls>
-            <source src="https://al.855955.xyz/d/123/rr/jkk.mp4?sign=c2zhosTaBv2I3OMX2YZr_LON-lj0MtUCS7oornUF9K0=:0" type="video/mp4">
+            <source src="https://al.855955.xyz/d/123/rr/jkkk.mp4?sign=26sDTCHIq_6S76NktyU3hWc5sfRHmEfwEPtjAMkB31M=:0" type="video/mp4">
             您的浏览器不支持 video 标签。
           </video>
         </div>
