--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="image/head.jpg" alt="">
         <div class="title"><h3><a href="/" target="_self">ikun主页</a></h3></div>
         <div class="spacer"></div>
-        <a href="javascript:void(0)" class="playBtn"><div class="ctrap"><p>点击唱跳Rap</p></div></a>
+        <a href="javascript:void(0)" class="playBtn"><div class="ctrap"><p>点鸡唱跳Rap</p></div></a>
     </div>
     <!-- 版心 -->
     <div class="container">
@@ -27,7 +27,7 @@
                 <!-- 用户的头像 -->
                 <img src="image/kk.jpg" alt="">
                 <!-- 用户名 -->
-                <div class="aaa"><a href="javascript:void(0)" class="playBtn"><h3>点击唱跳Rap</h3></a></div>
+                <div class="aaa"><a href="javascript:void(0)" class="playBtn"><h3>点鸡唱跳Rap</h3></a></div>
                      <!-- 弹窗内容 -->
                 
                 <!-- 其它信息 -->
