--- a/list.html
+++ b/list.html
@@ -11,41 +11,41 @@
         <div class="title">GitHub打不开？</div>
         <div class="date">点击搜索B站《GitHub加速》</div>
     </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <!-- -----------------------分割线----------------------- -->
     <a href="https://hellogithub.com"><div class="blog">
         <div class="title">HelloGitHub</div>
         <div class="date">点击跳转，分享 GitHub 上有趣、入门级的开源项目。</div>
     </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <!-- -----------------------分割线----------------------- -->
     <a href="html/tvbox.html"><div class="blog">
         <div class="title">TVbox</div>
         <div class="date">一款安卓电视上资源丰富的电视软件，一些4k资源在各大网盘上，可能需要网盘扫码和网盘VIP</div>
     </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <!-- -----------------------分割线----------------------- -->
     <a href="https://github.com/QingJ01/123pan_unlock" target="_blank"><div class="blog">
         <div class="title">123云盘</div>
         <div class="date">点击跳转GitHub，解锁你的123云盘VIP，让体验更美好#Tampermonkey#脚本</div>
     </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <!-- -----------------------分割线----------------------- -->
     <a href="html/tbtool.html"><div class="blog">
         <div class="title">图吧工具箱</div>
         <div class="date">DIY爱好者的必备工具合集</div>
     </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <!-- -----------------------分割线----------------------- -->
     <a href="html/xl7.html"><div class="blog">
         <div class="title">迅雷7纯净版</div>
         <div class="date">纯净，无广，下载不限速，体积轻巧</div>
     </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <!-- -----------------------分割线----------------------- -->
     <a href="html/sscs.html"><div class="blog">
         <div class="title">简单手速测试</div>
         <div class="date">一个简洁的网页速度测试集合</div>
     </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <!-- -----------------------分割线----------------------- -->
     <a href="html/w11qssz.html"><div class="blog">
         <div class="title">Win10/11轻松设置</div>
         <div class="date">Win11轻松设置</div>
     </div></a>
-    <!-- -----------------------分割线----------------------- --><div class="line"></div>
+    <!-- -----------------------分割线----------------------- -->
 </body>
 </html>
