--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="modal-content">
           <button class="close-btn" id="closeBtn">&times;</button>
           <video id="popupVideo" class="modal-video" controls>
-            <source src="https://al.855955.xyz/d/123/rr/jkk.webm?sign=8UZuIPjBa3rACy9QrGFpkxBNFLddS-VME2E3dITNul8=:0" type="video/mp4">
+            <source src="https://al.855955.xyz/d/123/rr/jkkk.mp4?sign=26sDTCHIq_6S76NktyU3hWc5sfRHmEfwEPtjAMkB31M=:0" type="video/mp4">
             您的浏览器不支持 video 标签。
           </video>
         </div>
